# checkers

./: CMakeLists.txt  Makefile  README
src/: board.cc  board.hh  checkers.cc  engine.cc  engine.hh  error.cc  error.hh  move.hh
tests/: controller.sh
